syntax = "proto3";

package pb;

import "barber/barbershop_services.proto";

option go_package = "barbershop/src/pb/barber";


message ListServicesByCategoryRequest{
    string barber_shop_id = 1;
}

message ListServicesByCategoryResponse {
    repeated BarberShopServices barber_shop_services = 1;
}